Minor bugfixes (trackSelection menu, bamRenderer get alignmentsRowHeight, scrollBarRenderer.renderScrollBar)
- zIndex of trackSelection container now set when everlay is active to prevent stacking contexts of trackSelection menu and md-menu overlapping.
- fixed bamRenderer get alignmentsRowHeight call to this._state.readsViewMode when state is not yet available.
- fixed scrollBarRenderer.renderScrollBar call to graphics.clear when graphics is not yet assigned.

--- a/client/client/app/components/ngbTracksSelection/ngbTracksSelection.scss
+++ b/client/client/app/components/ngbTracksSelection/ngbTracksSelection.scss
@@ -3,8 +3,11 @@ ngb-tracks-selection {
     display: flex;
     height: 100%;
     position: relative;
-    z-index: 99;
     transition: all 300ms ease;
+
+    &.overlay-visible {
+      z-index: 99;
+    }
 
     .overlay {
       display: none;
@@ -23,7 +26,6 @@ ngb-tracks-selection {
     .tracks-selection-button {
       padding: 0;
       margin: 0 3px;
-      z-index: 100;
       fill: #fff;
     }
   }
